# mu-repository

./: .gitignore  CMakeLists.txt  cmake_common.cmake
STM32F407/: CMakeLists.txt  CMakePresets.json
STM32F407/stm32-practical/: .cproject  .mxproject  CMakeLists.txt  commandfile.jlink  stm32f407-practical.ioc
STM32F407/stm32-practical-ex1/: .cproject  .project  CMakeLists.txt  commandfile.jlink  stm32f407-practical.ioc
STM32F407/stm32-practical-ex1/Core/Inc/: main.h  virtual_motor.h
STM32F407/stm32-practical-ex1/Core/Src/: main.c  virtual_motor.c
STM32F407/stm32-practical/Core/Inc/: main.h  stm32f4xx_it.h
STM32F407/stm32-practical/Core/Src/: main.c  stm32f4xx_hal_msp.c  virtual_motor.c
STM32F429/: CMakeLists.txt  cmake_common.cmake
STM32F429/stm32-practical-ex1/: .cproject  .mxproject  .project  STM32F429ZITX_FLASH.ld  stm32f429zit-template.ioc
STM32F429/stm32-practical-ex1/Core/Src/: main.c  stm32f4xx_hal_msp.c
STM32F429/stm32-practical-ex2/: .mxproject  .project  stm32f429zit-template Debug.launch  stm32f429zit-template.ioc
STM32F429/stm32-practical-ex2/Core/Src/: main.c  stm32f4xx_hal_msp.c
STM32F429/stm32-practical-ex3/: .mxproject  commandfile.jlink  stm32f429zit-template.ioc
STM32F429/stm32-practical-ex3/Core/Inc/: stm32f4xx_it.h
STM32F429/stm32-practical-ex3/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
STM32F429/stm32-practical-ex4/: .cproject  .project  stm32f429zit-template Debug.launch  stm32f429zit-template.ioc
STM32F429/stm32-practical-ex4/Core/Inc/: stm32f4xx_it.h
STM32F429/stm32-practical-ex4/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
STM32F429/stm32-practical-ex5/: .mxproject  .project  stm32f429zit-template.ioc
STM32F429/stm32-practical-ex5/Core/Inc/: stm32f4xx_it.h
STM32F429/stm32-practical-ex5/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
STM32F429/stm32-practical-ex6/: .mxproject  .project
STM32F429/stm32-practical-ex6/Core/Inc/: main.h  virtual_motor.h
STM32F429/stm32-practical-ex6/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  virtual_motor.c
STM32F429/stm32-practical-ex7/: .cproject  .project  CMakeLists.txt  stm32f429zit-template.ioc
STM32F429/stm32-practical-ex7/Core/Inc/: stm32f4xx_it.h
STM32F429/stm32-practical-ex7/Core/Src/: main.c
STM32F429/stm32-practical-ex8/: .cproject  .project  stm32f429zit-template.ioc
STM32F429/stm32-practical-ex8/Core/Inc/: main.h
STM32F429/stm32-practical-ex8/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  virtual_motor.c
STM32F429/stm32-practical-ex9/: .mxproject  stm32f429zit-template.ioc
STM32F429/stm32-practical-ex9/Core/Inc/: virtual_motor.h
STM32F429/stm32-practical-ex9/Core/Src/: main.c  stm32f4xx_hal_msp.c
stm32-practical/: .cproject  CMakeLists.txt  commandfile.jlink  stm32f407-practical.ioc
stm32-practical/Core/Inc/: stm32f4xx_it.h
stm32-practical/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
